tests/NormalTests/paczka1/fuzzy1/85195155.err
Error in line 7: RZrX0dFa A200 18,9
Error in line 16: sPnNmb1u A640 32,5
Error in line 22: KU5Bnp A200 37,44
Error in line 28: kOUBwEW A640 31,3
